// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic test with 2 players player 1 calls small blind with 5 1`] = `
Object {
  "activeSeatsCount": 2,
  "bigBlind": 10,
  "biggestBet": 10,
  "board": Array [],
  "button": 3,
  "deck": Array [
    "7d",
    "9c",
    "2h",
    "Ts",
    "Js",
    "3c",
    "4s",
    "8s",
    "Qs",
    "9s",
    "5c",
    "Ad",
    "9d",
    "Jc",
    "Kh",
    "5h",
    "Tc",
    "Qc",
    "Qd",
    "Ac",
    "5s",
    "9h",
    "As",
    "7c",
    "Ks",
    "3d",
    "Jh",
    "4d",
    "Qh",
    "8h",
    "6s",
    "2d",
    "6h",
    "6d",
    "6c",
    "Td",
    "7h",
    "Th",
    "8d",
    "3s",
    "3h",
    "Kc",
    "2s",
    "7s",
    "4c",
    "Jd",
    "8c",
    "2c",
    "Ah",
    "Kd",
    "5d",
    "4h",
  ],
  "gameOn": true,
  "id": 0,
  "lastPlayerToAct": 5,
  "maxActionTimeout": 60000,
  "maxBuyIn": 1000,
  "minActionTimeout": 15000,
  "minBuyIn": 500,
  "name": "Winna winna chicken dinna: 5/10 aar",
  "phase": "preFlop",
  "privateTable": false,
  "seats": Array [
    null,
    null,
    null,
    Object {
      "bet": 10,
      "cards": Array [],
      "chipsInPlay": 490,
      "inHand": true,
      "isAllIn": false,
      "playerId": "sid_player1",
      "position": 3,
      "sittingOut": false,
    },
    undefined,
    Object {
      "bet": 10,
      "cards": Array [],
      "chipsInPlay": 490,
      "inHand": true,
      "isAllIn": false,
      "playerId": "sid_player2",
      "position": 5,
      "sittingOut": false,
    },
  ],
  "seatsCount": 10,
  "smallBlind": 5,
  "toAct": 5,
}
`;

exports[`basic test with 2 players player 1 enters room 1`] = `
Object {
  "players": Object {
    "byId": Object {
      "sid_player1": Object {
        "chips": 10000,
        "id": "sid_player1",
        "name": "Player 1",
        "room": 0,
        "seat": -1,
      },
      "sid_player2": Object {
        "chips": 10000,
        "id": "sid_player2",
        "name": "Player 2",
        "seat": -1,
      },
    },
  },
  "tables": Object {
    "byId": Object {
      "0": Object {
        "activeSeatsCount": 0,
        "bigBlind": 10,
        "board": Array [],
        "gameOn": false,
        "id": 0,
        "maxActionTimeout": 60000,
        "maxBuyIn": 1000,
        "minActionTimeout": 15000,
        "minBuyIn": 500,
        "name": "Winna winna chicken dinna: 5/10 aar",
        "privateTable": false,
        "seats": Array [],
        "seatsCount": 10,
        "smallBlind": 5,
      },
    },
  },
}
`;

exports[`basic test with 2 players player 1 post small blind 1`] = `
Object {
  "activeSeatsCount": 2,
  "bigBlind": 10,
  "biggestBet": 5,
  "board": Array [],
  "button": 3,
  "deck": Array [
    "7d",
    "9c",
    "2h",
    "Ts",
    "Js",
    "3c",
    "4s",
    "8s",
    "Qs",
    "9s",
    "5c",
    "Ad",
    "9d",
    "Jc",
    "Kh",
    "5h",
    "Tc",
    "Qc",
    "Qd",
    "Ac",
    "5s",
    "9h",
    "As",
    "7c",
    "Ks",
    "3d",
    "Jh",
    "4d",
    "Qh",
    "8h",
    "6s",
    "2d",
    "6h",
    "6d",
    "6c",
    "Td",
    "7h",
    "Th",
    "8d",
    "3s",
    "3h",
    "Kc",
    "2s",
    "7s",
    "4c",
    "Jd",
    "8c",
    "2c",
    "Ah",
    "Kd",
    "5d",
    "4h",
  ],
  "gameOn": true,
  "id": 0,
  "lastPlayerToAct": 3,
  "maxActionTimeout": 60000,
  "maxBuyIn": 1000,
  "minActionTimeout": 15000,
  "minBuyIn": 500,
  "name": "Winna winna chicken dinna: 5/10 aar",
  "phase": "bigBlind",
  "privateTable": false,
  "seats": Array [
    null,
    null,
    null,
    Object {
      "bet": 5,
      "cards": Array [],
      "chipsInPlay": 495,
      "inHand": true,
      "isAllIn": false,
      "playerId": "sid_player1",
      "position": 3,
      "sittingOut": false,
    },
    undefined,
    Object {
      "bet": 0,
      "cards": Array [],
      "chipsInPlay": 500,
      "inHand": true,
      "isAllIn": false,
      "playerId": "sid_player2",
      "position": 5,
      "sittingOut": false,
    },
  ],
  "seatsCount": 10,
  "smallBlind": 5,
  "toAct": 5,
}
`;

exports[`basic test with 2 players player 1 takes seat on 3 1`] = `
Object {
  "activeSeatsCount": 1,
  "bigBlind": 10,
  "board": Array [],
  "gameOn": false,
  "id": 0,
  "maxActionTimeout": 60000,
  "maxBuyIn": 1000,
  "minActionTimeout": 15000,
  "minBuyIn": 500,
  "name": "Winna winna chicken dinna: 5/10 aar",
  "privateTable": false,
  "seats": Array [
    undefined,
    undefined,
    undefined,
    Object {
      "bet": 0,
      "cards": Array [],
      "chipsInPlay": 500,
      "inHand": false,
      "isAllIn": false,
      "playerId": "sid_player1",
      "position": 3,
      "sittingOut": false,
    },
  ],
  "seatsCount": 10,
  "smallBlind": 5,
}
`;

exports[`basic test with 2 players player 2 enters room 1`] = `
Object {
  "players": Object {
    "byId": Object {
      "sid_player1": Object {
        "chips": 10000,
        "id": "sid_player1",
        "name": "Player 1",
        "room": 0,
        "seat": -1,
      },
      "sid_player2": Object {
        "chips": 10000,
        "id": "sid_player2",
        "name": "Player 2",
        "room": 0,
        "seat": -1,
      },
    },
  },
  "tables": Object {
    "byId": Object {
      "0": Object {
        "activeSeatsCount": 0,
        "bigBlind": 10,
        "board": Array [],
        "gameOn": false,
        "id": 0,
        "maxActionTimeout": 60000,
        "maxBuyIn": 1000,
        "minActionTimeout": 15000,
        "minBuyIn": 500,
        "name": "Winna winna chicken dinna: 5/10 aar",
        "privateTable": false,
        "seats": Array [],
        "seatsCount": 10,
        "smallBlind": 5,
      },
    },
  },
}
`;

exports[`basic test with 2 players player 2 post big blind 1`] = `
Object {
  "activeSeatsCount": 2,
  "bigBlind": 10,
  "biggestBet": 10,
  "board": Array [],
  "button": 3,
  "deck": Array [
    "7d",
    "9c",
    "2h",
    "Ts",
    "Js",
    "3c",
    "4s",
    "8s",
    "Qs",
    "9s",
    "5c",
    "Ad",
    "9d",
    "Jc",
    "Kh",
    "5h",
    "Tc",
    "Qc",
    "Qd",
    "Ac",
    "5s",
    "9h",
    "As",
    "7c",
    "Ks",
    "3d",
    "Jh",
    "4d",
    "Qh",
    "8h",
    "6s",
    "2d",
    "6h",
    "6d",
    "6c",
    "Td",
    "7h",
    "Th",
    "8d",
    "3s",
    "3h",
    "Kc",
    "2s",
    "7s",
    "4c",
    "Jd",
    "8c",
    "2c",
    "Ah",
    "Kd",
    "5d",
    "4h",
  ],
  "gameOn": true,
  "id": 0,
  "lastPlayerToAct": 5,
  "maxActionTimeout": 60000,
  "maxBuyIn": 1000,
  "minActionTimeout": 15000,
  "minBuyIn": 500,
  "name": "Winna winna chicken dinna: 5/10 aar",
  "phase": "preFlop",
  "privateTable": false,
  "seats": Array [
    null,
    null,
    null,
    Object {
      "bet": 5,
      "cards": Array [],
      "chipsInPlay": 495,
      "inHand": true,
      "isAllIn": false,
      "playerId": "sid_player1",
      "position": 3,
      "sittingOut": false,
    },
    undefined,
    Object {
      "bet": 10,
      "cards": Array [],
      "chipsInPlay": 490,
      "inHand": true,
      "isAllIn": false,
      "playerId": "sid_player2",
      "position": 5,
      "sittingOut": false,
    },
  ],
  "seatsCount": 10,
  "smallBlind": 5,
  "toAct": 3,
}
`;

exports[`basic test with 2 players player 2 takes seat on 5 1`] = `
Object {
  "activeSeatsCount": 2,
  "bigBlind": 10,
  "board": Array [],
  "button": 3,
  "deck": Array [
    "7d",
    "9c",
    "2h",
    "Ts",
    "Js",
    "3c",
    "4s",
    "8s",
    "Qs",
    "9s",
    "5c",
    "Ad",
    "9d",
    "Jc",
    "Kh",
    "5h",
    "Tc",
    "Qc",
    "Qd",
    "Ac",
    "5s",
    "9h",
    "As",
    "7c",
    "Ks",
    "3d",
    "Jh",
    "4d",
    "Qh",
    "8h",
    "6s",
    "2d",
    "6h",
    "6d",
    "6c",
    "Td",
    "7h",
    "Th",
    "8d",
    "3s",
    "3h",
    "Kc",
    "2s",
    "7s",
    "4c",
    "Jd",
    "8c",
    "2c",
    "Ah",
    "Kd",
    "5d",
    "4h",
  ],
  "gameOn": true,
  "id": 0,
  "maxActionTimeout": 60000,
  "maxBuyIn": 1000,
  "minActionTimeout": 15000,
  "minBuyIn": 500,
  "name": "Winna winna chicken dinna: 5/10 aar",
  "phase": "smallBlind",
  "privateTable": false,
  "seats": Array [
    null,
    null,
    null,
    Object {
      "bet": 0,
      "cards": Array [],
      "chipsInPlay": 500,
      "inHand": true,
      "isAllIn": false,
      "playerId": "sid_player1",
      "position": 3,
      "sittingOut": false,
    },
    undefined,
    Object {
      "bet": 0,
      "cards": Array [],
      "chipsInPlay": 500,
      "inHand": true,
      "isAllIn": false,
      "playerId": "sid_player2",
      "position": 5,
      "sittingOut": false,
    },
  ],
  "seatsCount": 10,
  "smallBlind": 5,
  "toAct": 3,
}
`;

exports[`basic test with 2 players register Player 1 1`] = `
Object {
  "players": Object {
    "byId": Object {
      "sid_player1": Object {
        "chips": 10000,
        "id": "sid_player1",
        "name": "Player 1",
        "seat": -1,
      },
    },
  },
  "tables": Object {
    "byId": Object {
      "0": Object {
        "activeSeatsCount": 0,
        "bigBlind": 10,
        "board": Array [],
        "gameOn": false,
        "id": 0,
        "maxActionTimeout": 60000,
        "maxBuyIn": 1000,
        "minActionTimeout": 15000,
        "minBuyIn": 500,
        "name": "Winna winna chicken dinna: 5/10 aar",
        "privateTable": false,
        "seats": Array [],
        "seatsCount": 10,
        "smallBlind": 5,
      },
    },
  },
}
`;

exports[`basic test with 2 players register Player 2 1`] = `
Object {
  "players": Object {
    "byId": Object {
      "sid_player1": Object {
        "chips": 10000,
        "id": "sid_player1",
        "name": "Player 1",
        "seat": -1,
      },
      "sid_player2": Object {
        "chips": 10000,
        "id": "sid_player2",
        "name": "Player 2",
        "seat": -1,
      },
    },
  },
  "tables": Object {
    "byId": Object {
      "0": Object {
        "activeSeatsCount": 0,
        "bigBlind": 10,
        "board": Array [],
        "gameOn": false,
        "id": 0,
        "maxActionTimeout": 60000,
        "maxBuyIn": 1000,
        "minActionTimeout": 15000,
        "minBuyIn": 500,
        "name": "Winna winna chicken dinna: 5/10 aar",
        "privateTable": false,
        "seats": Array [],
        "seatsCount": 10,
        "smallBlind": 5,
      },
    },
  },
}
`;
